--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">80%</i></span>
+              <span class="skill">JavaScript <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 			
@@ -181,9 +181,9 @@
             </div>
 			
 			<div class="progress">
-              <span class="skill">Algortitmos (Portugol) <i class="val">95%</i></span>
+              <span class="skill">Wordpress <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -192,23 +192,23 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">95%</i></span>
+              <span class="skill">PHP <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">LARAVEL<i class="val">80%</i></span>
+              <span class="skill">LARAVEL<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">95%</i></span>
+              <span class="skill">Python <i class="val">100</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 			
@@ -251,7 +251,7 @@
             <h3 class="resume-title">Educação</h3>
             <div class="resume-item">
                 <h4>Sistemas da Computação - UFF RJ</h4>
-                <h5>2020 - 2022</h5>
+                <h5>2020 - 2023</h5>
                 <p><em>Curso Tecnologia em Sistemas da Computação</em></p>
                 <p>Resta apenas o TCC para conclusão do Curso</p>
             </div>
@@ -310,7 +310,7 @@
                             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="Ingryd Roma Festas"><i class="bx bx-expand"></i></a>
-                                <a href="http://ingrydroma.siteoficial.ws" title="Site de Ingryd Roma" target="_blank"><i class="bx bx-link"></i></a>
+                                <a href="http://ingrydroma.profissional.ws" title="Site de Ingryd Roma" target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -320,7 +320,27 @@
                             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="Ingryd Roma Festas"><i class="bx bx-expand"></i></a>
-                                <a href="http://ingrydroma.siteoficial.ws" title="Site de Ingryd Roma" target="_blank"><i class="bx bx-link"></i></a>
+                                <a href="http://ingrydroma.profissional.ws" title="Site de Ingryd Roma" target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                        <div class="portfolio-wrap">
+                            <img src="assets/img/portfolio/corregedoria-app.jpg" class="img-fluid" alt="">
+                            <div class="portfolio-links">
+                                <a href="assets/img/corregedoria-app.jpg" data-gall="portfolioGallery" class="venobox" title="Corregedoria APP"><i class="bx bx-expand"></i></a>
+                                <a href="http://app.siteprofissional.com" title="Corregedoria APP" target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                        <div class="portfolio-wrap">
+                            <img src="assets/img/portfolio/magazinecelular.jpg" class="img-fluid" alt="">
+                            <div class="portfolio-links">
+                                <a href="assets/img/magagazinecelular.jpg" data-gall="portfolioGallery" class="venobox" title="Magazine Celular"><i class="bx bx-expand"></i></a>
+                                <a href="http://magazinecelular.siteprofissional.com" title="Magazine Celular" target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
