--- a/index.html
+++ b/index.html
@@ -317,13 +317,15 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/mytherbank.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="Ingryd Roma Festas"><i class="bx bx-expand"></i></a>
-                                <a href="http://ingrydroma.profissional.ws" title="Site de Ingryd Roma" target="_blank"><i class="bx bx-link"></i></a>
+                                <a href="assets/img/portfolio/mytherbank.jpg" data-gall="portfolioGallery" class="venobox" title="Myther Bank"><i class="bx bx-expand"></i></a>
+                                <a href="http://mytherbank.profissional.com" title="Myther Bank" target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
+
+                    
                     
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
@@ -341,6 +343,16 @@
                             <div class="portfolio-links">
                                 <a href="assets/img/magagazinecelular.jpg" data-gall="portfolioGallery" class="venobox" title="Magazine Celular"><i class="bx bx-expand"></i></a>
                                 <a href="http://magazinecelular.siteprofissional.com" title="Magazine Celular" target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                        <div class="portfolio-wrap">
+                            <img src="assets/img/portfolio/devnologyapp.jpg" class="img-fluid" alt="">
+                            <div class="portfolio-links">
+                                <a href="assets/img/devnologyapp.jpg" data-gall="portfolioGallery" class="venobox" title="Gerenciador de Links"><i class="bx bx-expand"></i></a>
+                                <a href="http://devnology.siteprofissional.com" title="Magazine Celular" target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
