--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                             <img src="assets/img/portfolio/mytherbank.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/mytherbank.jpg" data-gall="portfolioGallery" class="venobox" title="Myther Bank"><i class="bx bx-expand"></i></a>
-                                <a href="http://mytherbank.profissional.com" title="Myther Bank" target="_blank"><i class="bx bx-link"></i></a>
+                                <a href="http://mytherbank.siteprofissional.com" title="Myther Bank" target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
