--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ include_once("recaptchalib.php");
 
 
 
-    <?php
+    <!-- <?php
         $secret = "6LfzciMaAAAAAK_3_VGMiOrPVAft743plnipRLnr";
 
         $response = null;
@@ -563,7 +563,7 @@ include_once("recaptchalib.php");
             echo "Prosseguir";
         }
 
-    ?>
+    ?> -->
 
 
 
