--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/devnologyapp.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/devnologyapp.jpg" data-gall="portfolioGallery" class="venobox" title="Gerenciador de Links"><i class="bx bx-expand"></i></a>
+                                <a href="assets/img/portfolio/devnologyapp.jpg" data-gall="portfolioGallery" class="venobox" title="Gerenciador de Links"><i class="bx bx-expand"></i></a>
                                 <a href="http://devnology.siteprofissional.com" title="Magazine Celular" target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -410,7 +410,7 @@
                           <img src="assets/img/portfolio/task_api.jpg" class="img-fluid" alt="">
                           <div class="portfolio-links">
                               <a href="assets/img/portfolio/task_api.jpg" data-gall="portfolioGallery" class="venobox" title="Api em Laravel utilizando Token JWT"><i class="bx bx-expand"></i></a>
-                              <a href="https://github.com/gclobawisk/task_api" title="Api em Laravel utilizando Token JWT" target="_blank"><i class="bx bx-link"></i></a>
+                              <a href="https://github.com/gclobawisk/task_api_php8_2" title="Api em Laravel utilizando Token JWT" target="_blank"><i class="bx bx-link"></i></a>
                           </div>
                       </div>
                   </div>
