--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Aniversário:</strong> 29/11/1989</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> programador.profissional.ws</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Telefone:</strong> 21 99661-1558</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Cidade:</strong> Campo Grande - RJ.</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Cidade:</strong> Nilópolis - RJ.</li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -113,7 +113,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Idade:</strong> 33</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Graduação:</strong> Formando em TI</li>
                   <li><i class="icofont-rounded-right"></i> <strong>E-mail::</strong> gabriel.clobawisk@hotmail.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Empregado:</strong> Não.</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Empregado:</strong> Sim.</li>
                 </ul>
               </div>
             </div><hr>
@@ -122,9 +122,9 @@
             <i class="icofont-file-php"> HTML5</i> <i class="icofont-file-html5"> CSS</i> <i class="icofont-file-javascript"> JAVASCRIPT</i></p>
             <i class="icofont-bootstrap"> Bootstrap</i></p><hr>
             <h5 style="color: red;"> Frameworks Back-end.</h5>
-            <p>Laravel / Django e Flask / (Express/Node.Js)</p><hr>
+            <p>Laravel & Livewire / Django e Flask / (Express/Node.Js)</p><hr>
             <h5 style="color: red;"> Frameworks Front-end.</h5>
-            <p>Bootstrap / React.js / Vue.js</p><hr>
+            <p>Bootstrap / React.js / Vue.js / Alpine.js</p><hr>
 
             <h5 style="color: red;"> Devops.</h5>
             <p>Git e GitHub / Docker e Docker Compose / AWS EC2, Elastic Beanstalk e S3</p>
