--- a/index.html
+++ b/index.html
@@ -173,6 +173,13 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+
+            <div class="progress">
+              <span class="skill">Alpines.js <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 			
 			<div class="progress">
               <span class="skill">Bootstrap <i class="val">95%</i></span>
@@ -200,7 +207,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">LARAVEL<i class="val">90%</i></span>
+              <span class="skill">LARAVEL<i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Livewire<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
