--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Alpines.js <i class="val">90%</i></span>
+              <span class="skill">Alpine.js <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -291,6 +291,19 @@
                     <li>Domínio do Wordpress / Bootstrap</li>
                     <li>SQL / MYSQL / JSON / API REST</li>
                   </ul>
+              </div>
+
+              <div class="resume-item">
+                <h4>Desenvolvedor PHP/Laravel PJ.</h4>
+                <h5>04/2023 - Presente data</h5>
+                <p><em>Rio de Janeiro. </em></p>
+                <ul>
+                  <li>Criação e Manutenção em PHP/Laravel/Livewire nos Sistemas da Empresa</li>
+                  <li>Criação e Manutenção de crons/scripts em Python. </li>
+                  <li>Competências: Laravel / Livewire / Alpine.js / Python / Mysql </li>
+                  <li>Utilização de Wordpress</li>
+                  <li>Criação e Consumo de API REST</li>
+                </ul>
               </div>
         </div>
 
