--- a/index.html
+++ b/index.html
@@ -294,6 +294,16 @@
               </div>
 
               <div class="resume-item">
+                <h4>Monitoria em Programação</h4>
+                <h5>07/2023 - abril/2023 (Temporário)</h5>
+                <p><em>Campo Grande - RJ. </em></p>
+                <ul>
+                  <li>Monitorar alunos e auxiliá-los nas dúvidas em programação com (HTML, CSS, Javascript, Bootstrap, React, Node e SQL)</li>
+                  <li>Competências: React.js · Node.js · JavaScript · MySQL · SQL</li>
+                </ul>
+              </div>
+
+              <div class="resume-item">
                 <h4>Desenvolvedor PHP/Laravel PJ.</h4>
                 <h5>04/2023 - Presente data</h5>
                 <p><em>Rio de Janeiro. </em></p>
