--- a/index.html
+++ b/index.html
@@ -304,11 +304,11 @@
               </div>
 
               <div class="resume-item">
-                <h4>Desenvolvedor PHP/Laravel PJ.</h4>
+                <h4>Desenvolvedor PHP/Laravel/Livewire como PJ.</h4>
                 <h5>04/2023 - Presente data</h5>
                 <p><em>Rio de Janeiro. </em></p>
                 <ul>
-                  <li>Criação e Manutenção em PHP/Laravel/Livewire nos Sistemas da Empresa</li>
+                  <li>Criação e Manutenção em PHP/Laravel/Livewire nos Sistemas da Empresa.</li>
                   <li>Criação e Manutenção de crons/scripts em Python. </li>
                   <li>Competências: Laravel / Livewire / Alpine.js / Python / Mysql </li>
                   <li>Utilização de Wordpress</li>
