--- a/index.html
+++ b/index.html
@@ -285,20 +285,20 @@
                   <h5>02/2018 - Presente data</h5>
                   <p><em>Rio de Janeiro. </em></p>
                   <ul>
-                    <li>Criação de Websites em PHP</li>
+                    <li>Criação de Websites em PHP.</li>
                     <li>Criação de Aplicações em PHP e Python. </li>
                     <li>Criação de Aplicações DJANGO / LARAVEL / NODE.js </li>
-                    <li>Domínio do Wordpress / Bootstrap</li>
+                    <li>Domínio do Wordpress / Bootstrap.</li>
                     <li>SQL / MYSQL / JSON / API REST</li>
                   </ul>
               </div>
 
               <div class="resume-item">
-                <h4>Monitoria em Programação</h4>
+                <h4>Monitoria em Programação - SENAC RJ</h4>
                 <h5>07/2023 - abril/2023 (Temporário)</h5>
                 <p><em>Campo Grande - RJ. </em></p>
                 <ul>
-                  <li>Monitorar alunos e auxiliá-los nas dúvidas em programação com (HTML, CSS, Javascript, Bootstrap, React, Node e SQL)</li>
+                  <li>Monitorar alunos que estão se formando como júnior e auxiliá-los nas dúvidas em programação com (HTML, CSS, Javascript, Bootstrap, React, Node e SQL).</li>
                   <li>Competências: React.js · Node.js · JavaScript · MySQL · SQL</li>
                 </ul>
               </div>
